# MiSTer-rich-presence

./: .gitignore  LICENSE  Makefile  README.md  notify.c
.github/workflows/: server-ci.yml
client/: MiSTerStatus.sln
client/MiSTerStatus/: MiSTerStatus.csproj  Program.cs
client/MiSTerStatus/Properties/: launchSettings.json
client/MiSTerStatus/config/: cores.txt  filters.txt
server/: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  Makefile  S92status  error.c  error.h  mister_status.c  network.c  network.h
server/scripts/: discord_service_off.sh  discord_service_on.sh  discord_service_update.sh
server/src/: CMakeLists.txt  error.c  helpers.c  helpers.h  mister_status.c  network.c  network.h
